--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 
     <div id="contact">
         <h3>Contact</h3>
-        <p>akpande2@illinois.edu</p>
+        <p>ashish.pandey@iiitd.ac.in</p>
         <p>
         Department of Mathematics<br>
-        155 Altgeld Hall<br>
-        University of Illinois at Urbana-Champaign<br>
-        Urbana, IL 61801 USA
+        B307 R & D Block<br>
+        IIIT Delhi<br>
+        New Delhi, DL 110020 India
         </p>
-        <p>Page last updated 19 Sep 2016.</p>
+        <p>Page last updated 13 June 2021.</p>
     </div>
  
     <h2 id="About Me">About Me</h2>
