--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
  
     <h2 id="About Me">About Me</h2>
     <p>
-    I am a fourth year PhD student in the <a href="http://www.math.uiuc.edu/">Department of Mathematics</a> at the <a href="http://www.uiuc.edu/">University of Illinois at Urbana-Champaign (UIUC)</a> working with <a href="http://www.math.illinois.edu/~verahur/">Vera Mikyoung Hur</a>. Prior to coming to the UIUC, I attended the <a href="http://www.niser.ac.in/">National Institute of Science, Education and Reserach</a> in India, where I obtained my Integrated M.Sc. in mathematics with a minor in physics.
+    I am an Assistant Professor <a href="https://math.iiitd.ac.in//">Department of Mathematics</a> at the <a href="https://iiitd.ac.in/">Indraprastha Institute of Information Technology Delhi (IIITD)</a> </a>.
     </p>
     <p><a href="cv.pdf">Curriculum Vitae</a></p>
 
  <h2 id="Research">Research</h2>
     <p>
-    My research interest lies in the area of nonlinear PDEs. For my PhD thesis, I am studying instabilities of some nonlinear dispersive PDEs associated with water waves such as Benjamin-Bona-Mahony (BBM) equation, Boussinesq equations, Kadomtsev-Petviashvili (KP) equation, Camasa-Holm (CH) equation etc.  
+    My primary research interest lies in Partial Differential Equations. I work on prolems related to stability of solutions of certain PDEs. PDEs, I have worked with so far, are all models of waves on a water surface. I am also interested in predictions of characteristics of tropical cyclones as it is closely related to shallow water wave models. I use models of machine learning in conjuction with PDEs describing tropical cyclone phenomena to get these predictions. I am also interested in some theoretical aspects of machine learning and its applications in Biology. In addition, I am also involved in some projects in Game Theory and Number Theory. For more details, please look at full lists of publications and preprints below. 
 <h3>Publications</h3>
     <ol>
         <li> <i>Modulational instability in a full-dispersion shallow water model</i> <a href="https://arxiv.org/pdf/1608.04685.pdf">arxiv</a>, 
